--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -134,7 +134,10 @@
       </defs>
     </svg>
 
-    <div class="menu">
+    <div
+      class="menu"
+      style="background: white !important; position: absolute; z-index: 9999"
+    >
       <div class="menu-item">
         <svg
           xmlns="http://www.w3.org/2000/svg"
