--- a/src/app/screens/block-list/block-list.component.css
+++ b/src/app/screens/block-list/block-list.component.css
@@ -223,375 +223,381 @@
 } */
 
 .switch_box {
-    height: 16px;
-    width: 30px;
-    background: #ccc;
-    border-radius: 40px;
-    cursor: pointer;
-    position: relative;
-    transition: 250ms;
+  height: 16px;
+  width: 30px;
+  background: #ccc;
+  border-radius: 40px;
+  cursor: pointer;
+  position: relative;
+  transition: 250ms;
 }
 
 .switch_box::before {
-    content: "";
-    border-radius: 17px;
-    height: 12px;
-    width: 12px;
-    position: absolute;
-    top: 50%;
-    left: 2px;
-    transform: translateY(-50%);
-    background-color: #fff;
-    transition: 250ms;
+  content: "";
+  border-radius: 17px;
+  height: 12px;
+  width: 12px;
+  position: absolute;
+  top: 50%;
+  left: 2px;
+  transform: translateY(-50%);
+  background-color: #fff;
+  transition: 250ms;
 }
 
 .switch_box.active {
-    background: linear-gradient(to left, #34836E 0%, #0DC997 100%);
+  background: linear-gradient(to left, #34836e 0%, #0dc997 100%);
 }
 
 .switch_box.active::before {
-    left: 16px;
-    background-color: white;
+  left: 16px;
+  background-color: white;
 }
 
 .container-own {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .top {
-    /* background: url(../../../assets/img/block.png);
+  /* background: url(../../../assets/img/block.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; */
-    position: relative;
-    border-radius: .6rem;
-    padding: 2rem;
-    margin-top: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-    border: 1px solid rgba(46, 188, 150, 0.50);
-    background: rgba(46, 188, 150, 0.20);
+  position: relative;
+  border-radius: 0.6rem;
+  padding: 2rem;
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  border: 1px solid rgba(46, 188, 150, 0.5);
+  background: rgba(46, 188, 150, 0.2);
 }
 
 .top img {
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    top: -30px;
-    left: 1rem;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: -30px;
+  left: 1rem;
 }
 
 .top button {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    background-color: transparent;
-    border: none;
-    outline: none;
-    border-radius: 4.325px;
-    background: #FFF;
-    box-shadow: 0px 0px 4.325px 0px rgba(0, 0, 0, 0.10);
-    height: 20px;
-    width: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-radius: 4.325px;
+  background: #fff;
+  box-shadow: 0px 0px 4.325px 0px rgba(0, 0, 0, 0.1);
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .top p {
-    max-width: 87ch;
-    color: #737791;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 130%;
-    letter-spacing: 0.36px;
-    margin-top: 2rem;
+  max-width: 87ch;
+  color: #737791;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130%;
+  letter-spacing: 0.36px;
+  margin-top: 2rem;
 }
 
 .top_t {
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    display: flex;
-    align-items: center;
-    gap: .5rem;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .top_t span {
-    color: var(--dark-color, #181818);
+  color: var(--dark-color, #181818);
 
-    /* Texi */
-    font-family: Nunito;
-    font-size: 1.1rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 0.54px;
+  /* Texi */
+  font-family: Nunito;
+  font-size: 1.1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.54px;
 }
 
 .table-top {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
 }
 
-.table-top>div {
-    display: flex;
-    gap: 1rem;
+.table-top > div {
+  display: flex;
+  gap: 1rem;
 }
 
 .tt-left button {
-    border-radius: 8px;
-    background: #FFF;
-    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
-    border: none;
-    outline: none;
-    padding: .7rem 1rem;
-    cursor: pointer;
-    color: #333540;
-    font-family: Poppins;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.5);
+  border: none;
+  outline: none;
+  padding: 0.7rem 1rem;
+  cursor: pointer;
+  color: #333540;
+  font-family: Poppins;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .tt-left button.active {
-    border-radius: 8px;
-    background: linear-gradient(0deg, #2EBC96 0%, #1A9096 100%);
-    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
-    color: white;
+  border-radius: 8px;
+  background: linear-gradient(0deg, #2ebc96 0%, #1a9096 100%);
+  box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.5);
+  color: white;
 }
 
 .search {
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-    border-radius: 8px;
-    background: #FFF;
-    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
-    padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.5);
+  padding: 0 1rem;
 
-    border-radius: 148px;
-    border: 1px solid rgba(46, 188, 150, 0.20);
-    background-color: rgba(46, 188, 150, 0.20);
+  border-radius: 148px;
+  border: 1px solid rgba(46, 188, 150, 0.2);
+  background-color: rgba(46, 188, 150, 0.2);
 }
 
 .search svg {
-    height: 20px;
-    width: 20px;
+  height: 20px;
+  width: 20px;
 }
 
 .search input {
-    padding: .7rem 1rem;
-    margin-right: -1rem;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    padding-left: 0;
-    color: var(--Greys-Blue-Grey-700, #333540);
-    font-family: Poppins;
-    font-size: .9rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  padding: 0.7rem 1rem;
+  margin-right: -1rem;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  padding-left: 0;
+  color: var(--Greys-Blue-Grey-700, #333540);
+  font-family: Poppins;
+  font-size: 0.9rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .tt-right button {
-    border-radius: 8px;
-    background: linear-gradient(0deg, #2EBC96 0%, #1A9096 100%);
-    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
-    border: none;
-    outline: none;
-    color: #FFF;
+  border-radius: 8px;
+  background: linear-gradient(0deg, #2ebc96 0%, #1a9096 100%);
+  box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.5);
+  border: none;
+  outline: none;
+  color: #fff;
 
-    /* Text/Text Regular 1 */
-    font-family: Poppins;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    padding: .7rem 1rem;
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-    cursor: pointer;
+  /* Text/Text Regular 1 */
+  font-family: Poppins;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 0.7rem 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
 }
 
 .table-wrapper {
-    width: 100%;
-    overflow-x: auto;
+  width: 100%;
+  overflow-x: auto;
 }
 
 .table {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .t-item {
-    display: flex;
-    border-radius: 5px;
-    border-bottom: 3px solid #EEE;
-    background: #FFF;
+  display: flex;
+  border-radius: 5px;
+  border-bottom: 3px solid #eee;
+  background: #fff;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .t-item:first-child {
-    font-size: 15px;
-    font-weight: 600;
+  font-size: 15px;
+  font-weight: 600;
 }
 
 .ti-item {
-    padding: 1rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ti-item:nth-child(1) {
-    flex: .1;
+  flex: 0.1;
 }
 
 .ti-item:nth-child(2) {
-    flex: .5;
+  flex: 0.5;
 }
 
-.ti-item:nth-child(3){
-    flex: .2;
+.ti-item:nth-child(3) {
+  flex: 0.2;
 }
+
 .ti-item:nth-child(4) {
-    flex: .45;
+  flex: 0.2;
 }
 
 .ti-item {
-    flex: .3;
+  flex: 0.2;
 }
 
 .actions {
-    display: flex;
-    align-items: center;
-    gap: 1.2rem;
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
 }
 
 .actions button {
-    cursor: pointer;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    position: relative;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  position: relative;
 }
 
-.actions button:hover>svg {
-    stroke: #24CC63;
-    stroke-width: 1px;
+.actions button:hover > svg {
+  stroke: #24cc63;
+  stroke-width: 1px;
 }
 
 .actions button:hover:before {
-    content: var(--content);
-    position: absolute;
-    left: calc(110% + 5px);
-    top: 50%;
-    transform: translateY(-50%);
-    border-radius: 4px;
-    background: #1A9096;
-    box-shadow: 0px 5px 10px -3.887px rgba(0, 0, 0, 0.25);
-    padding: .6rem 1rem;
-    color: #FFF;
-    font-family: Poppins;
-    font-size: .8rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 20px;
-    z-index: 10;
+  content: var(--content);
+  position: absolute;
+  left: calc(110% + 5px);
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 4px;
+  background: #1a9096;
+  box-shadow: 0px 5px 10px -3.887px rgba(0, 0, 0, 0.25);
+  padding: 0.6rem 1rem;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 0.8rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  z-index: 10;
 }
 
 .actions button:hover::after {
-    content: "";
-    position: absolute;
-    left: calc(110% - 5px);
-    top: 50%;
-    transform: translateY(-50%);
-    border-top: 5px solid transparent;
-    border-right: 10px solid #1A9096;
-    border-bottom: 5px solid transparent;
+  content: "";
+  position: absolute;
+  left: calc(110% - 5px);
+  top: 50%;
+  transform: translateY(-50%);
+  border-top: 5px solid transparent;
+  border-right: 10px solid #1a9096;
+  border-bottom: 5px solid transparent;
 }
 
 .add-con {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-    border-radius: 12px;
-    background: linear-gradient(273deg, #2EBC96 2.11%, #1A9096 121.12%);
-    padding: 1.5rem 3rem;
-    position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  border-radius: 12px;
+  background: linear-gradient(273deg, #2ebc96 2.11%, #1a9096 121.12%);
+  padding: 1.5rem 3rem;
+  position: relative;
 }
 
 .close {
-    position: absolute;
-    border-radius: 5.343px;
-    border: none;
-    background: #FFF;
-    box-shadow: 0px 0px 5.343px 0px rgba(0, 0, 0, 0.10);
-    outline: none;
-    top: .6rem;
-    right: .6rem;
-    height: 25px;
-    width: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  position: absolute;
+  border-radius: 5.343px;
+  border: none;
+  background: #fff;
+  box-shadow: 0px 0px 5.343px 0px rgba(0, 0, 0, 0.1);
+  outline: none;
+  top: 0.6rem;
+  right: 0.6rem;
+  height: 25px;
+  width: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
-.add-con>.left {
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-    align-items: flex-end;
+.add-con > .left {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  align-items: flex-end;
 }
 
 .inp_con {
-    min-width: 250px;
-    display: flex;
-    flex-direction: column;
+  min-width: 250px;
+  display: flex;
+  flex-direction: column;
 }
 
 .inp_con label {
-    color: #FFF;
-    font-size: .8rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    margin-bottom: .2rem;
+  color: #fff;
+  font-size: 0.8rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 0.2rem;
 }
 
 .inp_con select,
 .inp_con input {
-    border-radius: 9.418px;
-    border: 0.856px solid #D9D9D9;
-    background: rgba(217, 217, 217, 0.10);
-    outline: none;
-    padding: 1rem;
-    color: white;
+  border-radius: 9.418px;
+  border: 0.856px solid #d9d9d9;
+  background: rgba(217, 217, 217, 0.1);
+  outline: none;
+  padding: 1rem;
+  color: white;
 }
 
 .inp_con select option {
-    color: black;
+  color: black;
 }
 
 .add-con .left button {
-    padding: 1.05rem 2rem;
-    background-color: white;
-    border-radius: .6rem;
-    border: none;
-    outline: none;
-    font-size: .9rem;
-    font-weight: 600;
-    cursor: pointer;
+  padding: 1.05rem 2rem;
+  background-color: white;
+  border-radius: 0.6rem;
+  border: none;
+  outline: none;
+  font-size: 0.9rem;
+  font-weight: 600;
+  cursor: pointer;
 }
