--- a/src/app/screens/customers/customers.component.css
+++ b/src/app/screens/customers/customers.component.css
@@ -1,175 +1,207 @@
 .container-own {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
 }
 
 .header {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    background-color: #FCFCFC;
-    padding: 1.5rem;
-    border-radius: .6rem;
-    box-shadow: 0 0 10px #EEEEEE80;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  background-color: #fcfcfc;
+  padding: 1.5rem;
+  border-radius: 0.6rem;
+  box-shadow: 0 0 10px #eeeeee80;
 }
 
 .kanban {
-    font-size: 1rem;
-    font-weight: 500;
-    color: #333540;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #333540;
 }
 
 .header_more {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 1rem;
 }
 
 .filter {
-    background: linear-gradient(to right, #2EBC96, #1A9096);
-    display: flex;
-    align-items: center;
-    gap: .6rem;
-    padding: .7rem 1.1rem;
-    box-shadow: 0 0 10px #EEEEEEB2;
-    border-radius: .5rem;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-family: Poppins;
-    color: #333540;
-    font-size: .88rem;
-    font-weight: 400;
-    line-height: 27px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    color: white;
+  background: linear-gradient(to right, #2ebc96, #1a9096);
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+  padding: 0.7rem 1.1rem;
+  box-shadow: 0 0 10px #eeeeeeb2;
+  border-radius: 0.5rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-family: Poppins;
+  color: #333540;
+  font-size: 0.88rem;
+  font-weight: 400;
+  line-height: 27px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: white;
 }
 
 .filter::after {
-    content: "";
-    height: 4px;
-    width: 4px;
-    background-color: white;
-    border-radius: 4px;
-    margin-left: 1rem;
+  content: "";
+  height: 4px;
+  width: 4px;
+  background-color: white;
+  border-radius: 4px;
+  margin-left: 1rem;
 }
 
 .hm_right {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
-.hm_right>button {
-    display: flex;
-    background-color: white;
-    align-items: center;
-    gap: .6rem;
-    padding: .7rem 1.1rem;
-    box-shadow: 0 0 10px #EEEEEEB2;
-    border-radius: .5rem;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-family: Poppins;
-    color: #333540;
-    font-size: .88rem;
-    font-weight: 400;
-    line-height: 27px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    white-space: nowrap;
+.hm_right > button {
+  display: flex;
+  background-color: white;
+  align-items: center;
+  gap: 0.6rem;
+  padding: 0.7rem 1.1rem;
+  box-shadow: 0 0 10px #eeeeeeb2;
+  border-radius: 0.5rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-family: Poppins;
+  color: #333540;
+  font-size: 0.88rem;
+  font-weight: 400;
+  line-height: 27px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  white-space: nowrap;
 }
 
 .pagination {
-    display: flex;
-    margin-left: 1rem;
-    gap: .3rem;
-    width: 10;
+  display: flex;
+  margin-left: 1rem;
+  gap: 0.3rem;
+  width: 10;
 }
 
 .pagination button {
-    border: none;
-    outline: none;
-    background-color: transparent;
-    color: #333540;
-    font-size: 1rem;
-    font-weight: 300;
-    cursor: pointer;
-    height: 25px;
-    width: 25px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #333540;
+  font-size: 1rem;
+  font-weight: 300;
+  cursor: pointer;
+  height: 25px;
+  width: 25px;
 }
 
 .pagination button.active {
-    color: #2EBC96;
-    border: 1px solid #2EBC96;
-    border-radius: 5px;
+  color: #2ebc96;
+  border: 1px solid #2ebc96;
+  border-radius: 5px;
 }
 
 .table_wrapper {
-    overflow-x: auto;
+  overflow-x: auto;
 }
 
 .table {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    min-width: 1000px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-width: 1000px;
 }
 
 .table_header,
 .table_body {
-    display: flex;
-    background-color: #FFFFFF;
-    box-shadow: 0 0 20px #EEEEEE80;
-    align-items: center;
-    border-radius: .5rem;
-    position: relative;
+  display: flex;
+  background-color: #ffffff;
+  box-shadow: 0 0 20px #eeeeee80;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 0.5rem;
+  position: relative;
 }
 
 .th_item {
-    padding: 1.5rem 1rem;
-    white-space: nowrap;
-    flex: 1;
-    color: #333540;
-    font-size: .9rem;
-    text-align: center;
-    font-weight: 600;
+  padding: 1.5rem 0;
+  white-space: nowrap;
+  color: #333540;
+  font-size: 0.9rem;
+  text-align: center;
+  font-weight: 600;
 }
 
 .table_body .th_item {
-    color: #333540;
-    font-weight: 400;
-    font-size: 1rem;
+  color: #333540;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
 .th_item:nth-child(1) {
-    max-width: 30px;
+  max-width: 30px;
+}
+
+.th_item:nth-child(2) {
+  max-width: 120px;
+  width: 120px;
+}
+
+.th_item:nth-child(3) {
+  max-width: 150px;
+  width: 150px;
+}
+
+.th_item:nth-child(4) {
+  max-width: 150px;
+  width: 150px;
+}
+
+.th_item:nth-child(5) {
+  max-width: 100px;
+  width: 100px;
+}
+
+.th_item:nth-child(6) {
+  max-width: 70px;
+  width: 70px;
+}
+
+.th_item:nth-child(7) {
+  max-width: 70px;
+  width: 70px;
 }
 
 .toggle_more {
-    /* position: absolute;
+  /* position: absolute;
     top: 50%;
     transform: translateY(-50%);
     right: 1rem; */
-    padding: .6rem 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    outline: none;
-    background-color: white;
-    box-shadow: 0 0 10px #B3B3B380;
-    cursor: pointer;
-    /* opacity: 0; */
-    /* pointer-events: none; */
-    transition: 225ms;
+  padding: 0.6rem 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  outline: none;
+  background-color: white;
+  color: gray;
+  cursor: pointer;
+  /* opacity: 0; */
+  /* pointer-events: none; */
+  font-family: monospace;
+  font-size: 15px;
+  transition: 225ms;
 }
 
 /* .table_body:hover .toggle_more {
@@ -178,194 +210,216 @@
 } */
 
 .customer-details {
-    display: flex;
-    gap: 1.5rem;
-    padding: .75rem;
-    border-radius: .6rem;
-    background: #eee;
-    box-shadow: 0px 5px 22px 0px rgba(225, 224, 224, 0.90);
+  display: flex;
+  gap: 1.5rem;
+  padding: 0.75rem;
+  border-radius: 0.6rem;
+  background: #eee;
+  box-shadow: 0px 5px 22px 0px rgba(225, 224, 224, 0.9);
 }
 
 .left {
-    padding: 1.5rem;
-    border-radius: .7rem;
-    background: #FFF;
-    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.80);
+  padding: 1.5rem;
+  border-radius: 0.7rem;
+  background: #fff;
+  box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.8);
 }
 
 .user-details {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    border-radius: 8px;
-    /* background: #EEE; */
-    min-width: 300px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 8px;
+  /* background: #EEE; */
+  min-width: 300px;
 }
 
 .ud-user {
-    display: flex;
-    gap: .7rem;
-    align-items: center;
+  display: flex;
+  gap: 0.7rem;
+  align-items: center;
 }
 
 .dp {
-    height: 60px;
-    width: 60px;
-    border-radius: 45px;
-    background: linear-gradient(to right, #2EBC96, #1A9096);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: white;
+  height: 60px;
+  width: 60px;
+  border-radius: 45px;
+  background: linear-gradient(to right, #2ebc96, #1a9096);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: white;
 }
 
 .udu-dets {
-    display: flex;
-    flex-direction: column;
-    color: #888;
-    leading-trim: both;
-    text-edge: cap;
-    font-family: Poppins;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    letter-spacing: -0.36px;
+  display: flex;
+  flex-direction: column;
+  color: #888;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Poppins;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: -0.36px;
 }
 
 .ud_other {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .ud_other div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
 
 .ud_other div span {
-    color: #888;
-    leading-trim: both;
-    text-edge: cap;
-    font-family: Poppins;
-    font-size: .88rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: -0.32px;
+  color: #888;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Poppins;
+  font-size: 0.88rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.32px;
 }
 
 .right {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-    flex: 1;
-    height: fit-content;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  flex: 1;
+  height: fit-content;
 }
 
 .r_item {
-    border-radius: .5rem;
-    background: #FFF;
-    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.80);
-    padding: 1rem 1.5rem;
-    color: #888;
-    leading-trim: both;
-    text-edge: cap;
-    font-family: Poppins;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: -0.36px;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+  border-radius: 0.5rem;
+  background: #fff;
+  box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.8);
+  padding: 1rem 1.5rem;
+  color: #888;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Poppins;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.36px;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .r_item span {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .r_item span,
 .r_item strong {
-    flex: 1;
+  flex: 1;
 }
 
 .r_item:nth-child(3),
 .r_item:nth-child(4) {
-    grid-column: span 2;
+  grid-column: span 2;
 }
 
 .r_item:nth-child(3) strong,
 .r_item:nth-child(4) strong {
-    max-width: 160px;
+  max-width: 160px;
 }
 
 .icons_badge {
-    display: flex;
-    gap: .75rem;
-    padding: .5rem .75rem;
-    border-radius: 310px;
-    background: #15BD4E;
-    width: fit-content;
-    margin: 0 auto;
+  display: flex;
+  gap: 0.75rem;
+  padding: 5px 8px;
+  border-radius: 310px;
+  background: #15bd4e;
+  width: fit-content;
+  margin: 0 auto;
 }
 
 .icons_badge button {
-    border: none;
-    outline: none;
-    background-color: transparent;
-    cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.icons_badge svg {
+  height: 12px;
+  width: 12px;
 }
 
 .booking_dets_wrapper {
-    display: grid;
-    overflow: hidden;
-    grid-template-rows: 0;
-    margin: -.5rem;
+  display: grid;
+  overflow: hidden;
+  grid-template-rows: 0;
+  margin: -0.5rem;
 }
 
 .booking_dets_wrapper.active {
-    grid-template-rows: 1fr;
-    margin: 0;
+  grid-template-rows: 1fr;
+  margin: 0;
 }
 
 .th_item.searchable {
-    display: flex;
-    align-items: center;
-    gap: .75rem;
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
 }
 
 .searchable img {
-    object-fit: contain;
-    cursor: pointer;
+  object-fit: contain;
+  cursor: pointer;
 }
 
 .searchable.active {
-    gap: .25rem;
-    box-shadow: 0 0 5px #3335403f;
-    padding: .5rem;
-    margin: 1rem;
-    border-radius: .8rem;
-    position: relative;
+  gap: 0.25rem;
+  box-shadow: 0 0 5px #3335403f;
+  padding: 0.5rem;
+  margin: 1rem;
+  border-radius: 0.8rem;
+  position: relative;
 }
 
 .searchable.active input {
-    border: none;
-    outline: none;
-    background-color: transparent;
-    border-bottom: 1px solid #333;
-    padding: .5rem;
-    padding-right: 1.5rem;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  border-bottom: 1px solid #333;
+  padding: 0.5rem;
+  padding-right: 1.5rem;
 }
 
 .tsa_search {
-    position: absolute;
-    right: 1.5rem;
+  position: absolute;
+  right: 1.5rem;
+}
 
+.s_dot_r {
+  background-color: #ff515c;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+  display: inline-block;
+  margin-bottom: 0;
+}
+
+.s_dot_g {
+  background-color: #2ebc96;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+  display: inline-block;
+  margin-bottom: 0;
 }
