--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -1,6 +1,14 @@
 <main class="content d-flex">
   <!-- Left Section -->
-  <div class="tabs-container" style="width: 15%">
+  <div
+    class="tabs-container"
+    style="
+      width: 15%;
+      box-shadow: 0px 4px 20px 0px rgba(112, 144, 128, 0.2);
+      padding: 10px;
+      border-radius: 10px;
+    "
+  >
     <div class="tabs" style="min-width: fit-content">
       <div class="heading fs-6">Message Types</div>
       <div
@@ -135,11 +143,8 @@
           <div class="ic_top d-flex justify-content-between align-items-center">
             <h4 class="fw-semibold">{{ currentList }} Message {{ i + 1 }}</h4>
             <div class="ict_right">
-              <span
-                class="limit_text"
-                *ngIf="instance.limit > 0 && instance.isEditable"
-              >
-                {{ instance.value.length }} / {{ instance.limit }} characters
+              <span class="limit_text" *ngIf="instanceData[i].isEditable">
+                {{ currentMessageList[i].length }} / 1024
               </span>
               <button
                 *ngIf="!instanceData[i].isEditable"
@@ -160,6 +165,7 @@
             placeholder="Type here..."
             [(ngModel)]="currentMessageList[i]"
             *ngIf="instanceData[i].isEditable"
+            maxlength="1024"
           ></textarea>
           <textarea
             class="form-control"
@@ -178,6 +184,23 @@
       </div>
     </div>
 
+    <div
+      class="imp-banner"
+      *ngIf="
+        instanceData[0].isEditable ||
+        instanceData[1].isEditable ||
+        instanceData[2].isEditable
+      "
+    >
+      <div><img src="../../../assets/info-icon.png" /> Important Note:</div>
+      <p>
+        Sending too many URLs can increase the risk of a WhatsApp account ban
+        due to spam-detection policies. Ensure all messages are relevant and
+        provide clear value to recipients. Avoid repetitive or promotional
+        messages with excessive links to reduce the risk.
+      </p>
+    </div>
+
     <div class="top">
       <h1>
         <span style="text-transform: capitalize">{{ currentList }}</span>
@@ -193,17 +216,15 @@
             currentMessageList.length - 1,
             currentMessageList.length
           );
+          let i = index;
           trackBy: trackByIndex
         "
       >
         <div class="ic_top">
           <h4 class="fw-semibold">{{ instance.name }}Messages</h4>
           <div class="ict_right">
-            <span
-              class="limit_text"
-              *ngIf="instance.limit > 0 && instance.isEditable"
-            >
-              {{ instance.value.length }} / {{ instance.limit }} characters
+            <span class="limit_text" *ngIf="instanceData[3].isEditable">
+              {{ currentMessageList[3].length }} / 1024
             </span>
             <button
               *ngIf="!instance.isEditable"
@@ -217,16 +238,32 @@
         </div>
 
         <textarea
-          *ngIf="instanceData[3].isEditable"
           [(ngModel)]="currentMessageList[3]"
+          *ngIf="instanceData[3].isEditable"
           placeholder="Type here..."
-          (ngModelChange)="onTextAreaChange(instance, $event)"
+          maxlength="1024"
         ></textarea>
         <textarea
+          disabled
           *ngIf="!instanceData[3].isEditable"
           [(ngModel)]="currentMessageList[3]"
           placeholder="Type here..."
         ></textarea>
+
+        <!-- <textarea
+        class="form-control"
+        placeholder="Type here..."
+        [(ngModel)]="currentMessageList[i]"
+        *ngIf="instanceData[i].isEditable"
+        maxlength="1024"
+      ></textarea>
+      <textarea
+        class="form-control"
+        placeholder="Type here..."
+        [(ngModel)]="currentMessageList[i]"
+        *ngIf="!instanceData[i].isEditable"
+        disabled
+      ></textarea> -->
         <div class="msg-btn-container" *ngIf="instanceData[3].isEditable">
           <button class="msg-btn" (click)="toggleEdit(instance, 3)">
             Cancel
@@ -234,6 +271,14 @@
           <button class="msg-btn" (click)="setMessage(3)">Update</button>
         </div>
       </div>
+    </div>
+    <div class="imp-banner" *ngIf="instanceData[3].isEditable">
+      <div><img src="../../../assets/info-icon.png" /> Important Note:</div>
+      <p>
+        Keep your SMS text within 160 characters to ensure it is sent as a
+        single message. Messages over 160 characters will be counted as two or
+        more.
+      </p>
     </div>
   </div>
 </main>
